# RAG

./: .env.example  .gitignore  RAG.ipynb  RAG.py  README.md  main.py  pyproject.toml  【人工智能】创业公司如何利用AI加速成功 | Andrew Ng吴恩达YC演讲 | AI的技术栈 | Agentic AI | 最大机会在应用层 | 具体的想法 | 人人都应该学习编程 | 警惕守门人.txt
data/: 【人工智能】AI构建者手册2025 | ICONIQ发布68页报告| AI原生公司 | AI赋能公司 | 代理工作流 | 基础设施 | 市场定价 | 团队结构 | 成本预算 | 内部效率 - YouTube.txt
storage/: documents.txt  vectors.npy
